major cleanup